# EchoPath

./: .gitignore  README.md  TTS_integrated_model.ipynb  Yolo_train.py  echopath_test.ipynb  main.py  pyproject.toml  requirements.txt
Depth Analysis V2/: EchoPath_Pipeline_HPC_fixed.ipynb
EchoPath_TTS/: EchoPath_Pipeline_MiDaS_v2_with_TTS (2).ipynb
echopath_audio/: diagnose.py  label_parser.py  process_video.py  tts_engine.py
midas_small/: EchoPath_Pipeline_MiDaS_v2.ipynb
models/: compare_models.py  rtdetr.py  yolov8n.py
runs/detect/runs/echopath/v1/: args.yaml  results.csv
runs/detect/runs/echopath/v2/: args.yaml  results.csv
runs/detect/runs/echopath/v3/: args.yaml  results.csv
