[project]
name = "echopath"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib",
    "numpy",
    "opencv-python",
    "pandas",
    "pillow",
    "pyttsx3",
    "pyyaml",
    "scipy",
    "seaborn",
    "timm",
    "torch",
    "torchaudio",
    "torchvision",
    "ultralytics",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }